Frontend - Add overflow: scroll to playlist and queue, add counter to musics in playlist, fix counter in queue

--- a/Notify-frontend/src/assets/css/playlist.module.css
+++ b/Notify-frontend/src/assets/css/playlist.module.css
@@ -2,6 +2,8 @@
   background: linear-gradient(to bottom, #2a2a2a, #121212);
   padding: 2rem;
   color: white;
+
+  overflow: scroll;
 }
 
 /* Header */
